# e3nn-pt2

./: .gitignore  README.md  e3x_license.txt  pyproject.toml  requirements.txt
e3nn-pt2/nn/: __init__.py  _linear.py  _tensor_product.py  _tplinear.py
e3nn-pt2/so3/: __init__.py  _common.py  _irreps.py
e3nn_pt2/: __init__.py
e3nn_pt2/nn/: __init__.py  linear.py  tensor_product.py  tplinear.py
e3nn_pt2/so3/: common.py  irreps.py
examples/: benchmark.py  tetris.ipynb
examples/benchmarking/: benchmark.py
test/: test_linear.py  test_tp.py  test_tplinear.py
tinye3nn/: __init__.py
tinye3nn/nn/: __init__.py  linear.py  tensor_product.py  tplinear.py  wrappers.py
tinye3nn/nn/functions/: __init__.py  window.py
tinye3nn/ops/: safe.py
tinye3nn/so3/: __init__.py  common.py  irreps.py  spherical_harmonics.py
