[project]
name = "tinye3nn"
description = "Combines e3nn-jax's performance with e3nn-torch's flexibility through the power of tinygrad"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "The tinygrad Authors", email="mitkotak0305@gmail.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
]
keywords = [
    "equivariance", "equivariant", "invariance", "invariant",
    "E(3)", "SE(3)", "O(3)", "SO(3)",
    "Euclidean", "Orthogonal", "group",
    "translation", "translational",
    "rotation", "rotational",
    "roto-translation", "roto-translational",
    "reflection",
    "neural network", "machine learning", "deep learning",
]

# pip dependencies of the project

dependencies = [
  "e3nn",
  "tinygrad",
]


# This is set automatically by flit using `e3x.__version__`
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/atomicarchitects/e3nn-pt2"
repository = "https://github.com/atomicarchitects/e3nn-pt2"
# Other: `documentation`, `changelog`

[build-system]
requires = ["flit_core >=3.5,<4"]
build-backend = "flit_core.buildapi"
